fix metadata for coverstory

--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -745,23 +745,12 @@ ul.errorlist{
 }
 
 .embedded-metadata{
-  position: absolute;
   bottom: 0;
-  left:0;
+  left: 0;
   right: 0;
-  padding: 10px;
-  background-color: transparent;
-  text-shadow: 0px 0px 1px #151515;
-  color: #bfbfbf;
+  padding: 5px 2px 0 2px;
   font-size: 10px;
   line-height: 15px;
-  transition: color .36s ease-in-out;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#dddddd+0,151515+100&0+0,0.89+88 */
-background: -moz-linear-gradient(top,  rgba(221,221,221,0) 0%, rgba(45,45,45,0.89) 88%, rgba(21,21,21,0.89) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(221,221,221,0) 0%,rgba(45,45,45,0.89) 88%,rgba(21,21,21,0.89) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(221,221,221,0) 0%,rgba(45,45,45,0.89) 88%,rgba(21,21,21,0.89) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00dddddd', endColorstr='#e3151515',GradientType=0 ); /* IE6-9 */
-
 }
 
 
